feat(PSN-65): Create API to delete type
